--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -60,7 +60,8 @@ jobs:
           hugo \
             --gc \
             --minify \
-            --baseURL "https://lillatoma.com/"          
+            --baseURL "https://lillatoma.com/" \
+            -D
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
